--- a/Lottery/index.html
+++ b/Lottery/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="header__content">
                     <div class="col-md-2">
-                        <img src="src/img/Logo.png" alt="header__logo" class="header__logo">
+                        <img src="/lottery/src/img/Logo.png" alt="header__logo" class="header__logo">
                     </div>
                     <div class="col-md-8">
                         <nav class="nav">
@@ -222,37 +222,37 @@
                 <div class="partners">
                     <div class="partners__logos">
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner3.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner3.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner3.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner3.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner2.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner2.png" alt="" class="partner__logo">
                         </div>
                         <div class="partners__img-wrap">
-                            <img src="src/img/partner1.png" alt="" class="partner__logo">
+                            <img src="/lottery/src/img/partner1.png" alt="" class="partner__logo">
                         </div>
                     </div>
                     <div class="partner__radios">
