--- a/photoGrad/index.html
+++ b/photoGrad/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://allfont.ru/allfont.css?fonts=compact" rel="stylesheet" type="text/css"/>
-    <link href="http://allfont.ru/allfont.css?fonts=prestige-normal" rel="stylesheet" type="text/css" />
+    <link href="https://allfont.ru/allfont.css?fonts=compact" rel="stylesheet" type="text/css"/>
+    <link href="https://allfont.ru/allfont.css?fonts=prestige-normal" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="../photoGrad/css/slick.css">
     <link rel="stylesheet" href="../photoGrad/css/style.css">
     <link rel="shortcut icon" href="/photoGrad/img/Logo.svg">
