--- a/photoGrad/index.html
+++ b/photoGrad/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../photoGrad/css/font.css">
     <link rel="stylesheet" href="../photoGrad/css/slick.css">
     <link rel="stylesheet" href="../photoGrad/css/style.css">
     <link rel="shortcut icon" href="/photoGrad/img/Logo.svg">
