--- a/Mir/index.html
+++ b/Mir/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../Mir/css/style.css">
     <link rel="shortcut icon" href="/img/favicon.ico">
     <title>Играем в МИР</title>
 </head>
@@ -13,7 +13,7 @@
         <div class="content">
             <header class="header">
                 <div class="header__logo">
-                    <img src="../img/logo.png" alt="Logo" class="header__img">
+                    <img src="../Mir/img/logo.png" alt="Logo" class="header__img">
                 </div>
                 <div class="header__titles">
                     <div class="header__h1-wrap">
@@ -21,11 +21,11 @@
                     </div>
                     <div class="header__h2-wrap">
                         <h2 class="header__h2">Получи 850 ролларов + сертификат резидента мира</h2>
-                        <img src="../img/flag.png" alt="" class="header__img">
+                        <img src="../Mir/img/flag.png" alt="" class="header__img">
                     </div>
                 </div>
                 <div class="header__sertificates">
-                    <img src="../img/roll.png" alt="Rollar" class="header__img">
+                    <img src="../Mir/img/roll.png" alt="Rollar" class="header__img">
                 </div>
             </header>
             <section class="about">
@@ -36,11 +36,11 @@
                     </div>
                 </div>
                 <div class="about__photos">
-                    <div class="about__photo"><img src="../img/laptop1.png" alt=""></div>
-                    <div class="about__photo"><img src="../img/laptop2.png" alt=""></div>
-                    <div class="about__photo"><img src="../img/phone1.png" alt=""></div>
-                    <div class="about__photo"><img src="../img/phone2.png" alt=""></div>
-                    <div class="about__photo"><img src="../img/tablet.png" alt=""></div>
+                    <div class="about__photo"><img src="../Mir/img/laptop1.png" alt=""></div>
+                    <div class="about__photo"><img src="../Mir/img/laptop2.png" alt=""></div>
+                    <div class="about__photo"><img src="../Mir/img/phone1.png" alt=""></div>
+                    <div class="about__photo"><img src="../Mir/img/phone2.png" alt=""></div>
+                    <div class="about__photo"><img src="../Mir/img/tablet.png" alt=""></div>
                 </div>
                 <!-- <div class="about__photos">
                     
@@ -52,7 +52,7 @@
                     <br>
                     <p>Оболочкой Игры является государство МИР – Мировая Интернациональная Республика – единое мировое цифровое государство с единой системой ценностей, единой мировой валютой и единой многофункциональной экосистемой на сайте Miruwir.com.</p>
                     <br>
-                    <img src="../img/logo.png" alt="Logo" class="about__img">
+                    <img src="../Mir/img/logo.png" alt="Logo" class="about__img">
                     <p>Государство МИР основано 1 января 2020 года.  У него нет своей физической территории, но есть виртуальная - мировой интернет.  Предназначение государства отражено в его девизе на гербе: SALUS POPULI SUPREMA LEX (латынь) - БЛАГО НАРОДА ВЫСШИЙ ЗАКОН - делать все необходимое для благополучия и процветания граждан.</p>
                     <br>
                     <p>Главной особенностью Игры и ее государства является тесная взаимосвязь с реальным миром, позволяющая всем пользователям значительно экономить реальные деньги на покупках разнообразных товаров и услуг, а также получать два вида доходов: виртуальные и реальные.  Чем выше социальный статус игрока, тем больше доходов он может получать, занимаясь бизнесом, работая на должностях в игровом государстве и пр.</p>
@@ -70,128 +70,128 @@
 
                 <div class="eco__options">
                     <div class="eco__option">
-                        <img src="../img/svg op/op1.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op1.svg" alt="" class="eco__img">
                         <span class="eco__title">родословная</span>
                         <span class="eco__text">Многоуровневая реферальная программа с выплатами в игровой валюте</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op2.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op2.svg" alt="" class="eco__img">
                         <span class="eco__title">счет</span>
                         <span class="eco__text">Учет игровой валюты, оплата покупок, обмен игровой валюты на обычные деньги через специальные крипто-токены (с 2021 г.)</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op3.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op3.svg" alt="" class="eco__img">
                         <span class="eco__title">профиль</span>
                         <span class="eco__text">Личный профиль игрока и его аватара с указанием занимаемых должностей в МИРе, бизнес-активов, титулов, заслуг и пр.</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op4.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op4.svg" alt="" class="eco__img">
                         <span class="eco__title">мессенджер</span>
                         <span class="eco__text">Система сообщений</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op5.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op5.svg" alt="" class="eco__img">
                         <span class="eco__title">дайджест</span>
                         <span class="eco__text">Ежедневный журнал об итогах прошедшего дня в Игре и МИРе</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op6.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op6.svg" alt="" class="eco__img">
                         <span class="eco__title">блог</span>
                         <span class="eco__text">Новости и информация Игры и МИРа</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op7.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op7.svg" alt="" class="eco__img">
                         <span class="eco__title">купоны</span>
                         <span class="eco__text">Разовые скидки на товары и услуги по бесплатным купонам для жителей МИРа</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op8.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op8.svg" alt="" class="eco__img">
                         <span class="eco__title">карта</span>
                         <span class="eco__text">постоянные скидки на товары и услуги по дисконтно- бонусной карте жителя МИРа</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op9.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op9.svg" alt="" class="eco__img">
                         <span class="eco__title">тендеры</span>
                         <span class="eco__text">Сервис потребительских тендеров: «напиши, что тебе нужно, получи предложения от разных поставщиков, выбери подходящее»</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op10.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op10.svg" alt="" class="eco__img">
                         <span class="eco__title">маркетплейс</span>
                         <span class="eco__text">Торгово-развлекательный центр с оплатой товаров и услуг в обычных деньгах и/или игровой валюте</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op11.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op11.svg" alt="" class="eco__img">
                         <span class="eco__title">доска</span>
                         <span class="eco__text">Доска бесплатных частных объявлений жителей МИРа с оплатой покупок в обычных деньгах и/или игровой валюте</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op12.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op12.svg" alt="" class="eco__img">
                         <span class="eco__title">прокат</span>
                         <span class="eco__text">Сервис совместного пользования товарами, техникой, авто и пр. с оплатой проката в обычных деньгах и/или игровой валюте</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op13.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op13.svg" alt="" class="eco__img">
                         <span class="eco__title">новости</span>
                         <span class="eco__text">Агрегатор мировых новостей</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op14.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op14.svg" alt="" class="eco__img">
                         <span class="eco__title">погода</span>
                         <span class="eco__text">Агрегатор погоды</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op15.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op15.svg" alt="" class="eco__img">
                         <span class="eco__title">тв</span>
                         <span class="eco__text">Агрегатор телеканалов</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op16.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op16.svg" alt="" class="eco__img">
                         <span class="eco__title">билеты</span>
                         <span class="eco__text">Cервис покупок билетов:авиа, ж.д. и пр.</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op17.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op17.svg" alt="" class="eco__img">
                         <span class="eco__title">игры</span>
                         <span class="eco__text">Агрегатор онлайновых игр</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op18.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op18.svg" alt="" class="eco__img">
                         <span class="eco__title">радио</span>
                         <span class="eco__text">Агрегатор радиостанций</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op19.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op19.svg" alt="" class="eco__img">
                         <span class="eco__title">кино</span>
                         <span class="eco__text">Агрегатор фильмов и сериалов</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op20.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op20.svg" alt="" class="eco__img">
                         <span class="eco__title">работа</span>
                         <span class="eco__text">Сервис поиска работы и сотрудников</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op21.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op21.svg" alt="" class="eco__img">
                         <span class="eco__title">знакомства</span>
                         <span class="eco__text">Сервис знакомств</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op22.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op22.svg" alt="" class="eco__img">
                         <span class="eco__title">академия</span>
                         <span class="eco__text">Удаленное образование: дошкольное, среднее, средне-специальное, высшее, специализированное, личностный рост, бизнес</span>
                     </div>
                     <div class="eco__option">
-                        <img src="../img/svg op/op23.svg" alt="" class="eco__img">
+                        <img src="../Mir/img/svg op/op23.svg" alt="" class="eco__img">
                         <span class="eco__title">офис</span>
                         <span class="eco__text">Удаленный офис и его генератор продаж для официальных поставщиков товаров и услуг жителям и бизнесу МИРа</span>
                     </div>
                 </div>
                 <div class="eco__photos">
-                    <div class="eco__photo"><img src="../img/laptop3.png" alt="laptop"></div>
-                    <div class="eco__photo"><img src="../img/laptop4.png" alt="laptop"></div>
-                    <div class="eco__photo"><img src="../img/laptop5.png" alt="laptop"></div>
-                    <div class="eco__photo"><img src="../img/laptop6.png" alt="laptop"></div>
-                    <div class="eco__photo"><img src="../img/laptop7.png" alt="laptop"></div>
-                    <div class="eco__photo"><img src="../img/laptop8.png" alt="laptop"></div>
+                    <div class="eco__photo"><img src="../Mir/img/laptop3.png" alt="laptop"></div>
+                    <div class="eco__photo"><img src="../Mir/img/laptop4.png" alt="laptop"></div>
+                    <div class="eco__photo"><img src="../Mir/img/laptop5.png" alt="laptop"></div>
+                    <div class="eco__photo"><img src="../Mir/img/laptop6.png" alt="laptop"></div>
+                    <div class="eco__photo"><img src="../Mir/img/laptop7.png" alt="laptop"></div>
+                    <div class="eco__photo"><img src="../Mir/img/laptop8.png" alt="laptop"></div>
                 </div>
             </section>
             <section class="referal">
@@ -202,7 +202,7 @@
                     </div>
                 </div>
                 <div class="referal__about">
-                    <img src="../img/referal.png" alt="referal.png" class="referal__img">
+                    <img src="../Mir/img/referal.png" alt="referal.png" class="referal__img">
                     <p>Массовое привлечение новых пользователей в Игру по всему миру происходит через реферальную программу сайта, которая называется «Родословная», так как учитывает и показывает, кто кого «родил» - пригласил на сайт.  Программа дает возможность получать оплату за приглашение на сайт рефералов: друзей, родных и близких, коллег, деловых партнеров и пр.  По сравнению с обычными одноуровневыми реферальными программами, выплачивающими вознаграждение только за первый уровень рефералов (тех, кого пригласил сам пользователь - реферер), «Родословная» является многоуровневой и выплачивает реферерам вознаграждения за 7 уровней рефералов.</p>
                     <br><br>
                 </div>
@@ -252,7 +252,7 @@
                     </table>
                     <h3 class="referal__title">Приглашать, зарабатывать, тратить</h3>
                     <p>На главной странице кабинета жителя МИРа слева наверху расположена желтая копка "Заработать" для приглашения на сайт по реферальной ссылке.  Голубое меню слева позволяет просматривать рефералов разных уровней.  В центральной зеленой части показываются рефералы пользователя, в бежевой колонке справа - лидеры реферальной программы сайта по количеству рефералов и заработанным вознаграждениям.</p>
-                    <img src="../img/earn-laptop.png" alt="earn-laptop.png" class="referal__laptop">
+                    <img src="../Mir/img/earn-laptop.png" alt="earn-laptop.png" class="referal__laptop">
                     <h3 class="referal__title referal__title_2">Заработанные реферальные роллары можно использовать для трех целей: </h3>
                     <ol class="referal__list" >
                         <li>
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="registration__wrap">
-                    <img src="../img/reg-bg.png" class="registration__bg" alt="reg-bg.png">
+                    <img src="../Mir/img/reg-bg.png" class="registration__bg" alt="reg-bg.png">
                     <div class="registration__content">
                         <div class="registration__head">
                             <div class="registration__top">
@@ -287,9 +287,9 @@
                             </div>
                             <div class="registration__bottom">
                                 <span>850</span>
-                                <img src="../img/rollar.png" alt="" class="registration__img">
+                                <img src="../Mir/img/rollar.png" alt="" class="registration__img">
                                 <span>+</span>
-                                <img src="../img/sertificate.png" class="registration__img" alt="">
+                                <img src="../Mir/img/sertificate.png" class="registration__img" alt="">
                             </div>
                         </div>
                         <div class="registration__text">
