--- a/solution/index.html
+++ b/solution/index.html
@@ -1054,7 +1054,8 @@
                   <label class="form__field"><input type="email" placeholder="Ваш email" required>Введите ващ e-mail</label>
                   <input type="hidden" name="zone" value="">
                   <input type="hidden" name="items" value="">
-                  <input type="hidden" name="glass" value=""> 
+                  <input type="hidden" name="glass-color" value="">
+                  <input type="hidden" name="glass-name" value="">
                   <div class="check fx align-center">
                     <label class="check__item fx">
                       <input type="checkbox" name="check" checked="checked" required>
