--- a/solution/index.html
+++ b/solution/index.html
@@ -482,7 +482,7 @@
            <!-- Item -->
 
           <div class="steps__item steps__item_3" style="display: none;">
-            <div class="container">
+            <div class="container alt-row">
 
               <!-- Wrap -->
 
@@ -515,7 +515,8 @@
 
               <!-- Image -->
 
-              <div class="steps__image" style="background: url(img/steps/3.jpg) center/cover no-repeat;">
+              <div class="steps__image_3">
+                <img src="img/steps/3.jpg" alt="">
                 <div id="fasade" class="steps__dot fasade"> <div></div></div>
                 <div id="cupboard" class="steps__dot cupboard"> <div></div></div>
                 <div id="glass-table" class="steps__dot glass-table"> <div></div></div>
