--- a/solution/index.html
+++ b/solution/index.html
@@ -633,7 +633,7 @@
                   </li>
                   <li>
                     <div class="accordion-header">
-                      <span class="steps-list__txt">MNGE</span><i class="plus"></i>
+                      <span class="steps-list__txt">Matelux</span><i class="plus"></i>
                     </div>
                     <div class="accordion-body">
                       <div class="bloom">
@@ -660,32 +660,6 @@
                   <li>
                     <div class="accordion-header">
                       <span class="steps-list__txt">Mirox</span><i class="plus"></i>
-                    </div>
-                    <div class="accordion-body">
-                      <div class="bloom">
-                        <p class="bloom__txt">Расширение пространства</p>
-                        <ul class="bloom__list fx fx-wrap">
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
-                        </ul>
-                      </div>
-                      <p class="details__link fx">
-                        <a href="#" class="fx align-center">Подробнее о материале
-                          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <path fill-rule="evenodd"
-                             d="M19.226,7.509 C19.226,7.615 19.183,7.711 19.113,7.780 C19.113,7.780 19.113,7.781 19.113,7.781 L12.201,14.687 C12.051,14.837 11.808,14.837 11.658,14.687 C11.584,14.612 11.546,14.514 11.546,14.416 C11.546,14.318 11.584,14.219 11.658,14.144 L17.915,7.893 L1.178,7.893 C0.966,7.893 0.794,7.721 0.794,7.509 C0.794,7.297 0.966,7.125 1.178,7.125 L17.915,7.125 L11.658,0.874 C11.509,0.724 11.509,0.481 11.658,0.331 C11.808,0.182 12.051,0.182 12.201,0.331 L19.112,7.237 C19.182,7.307 19.226,7.403 19.226,7.509 Z"/>
-                          </svg>
-                        </a>
-                      </p>
-                      <div class="material__text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque necessitatibus, iste alias porro amet cum sit officia fugit eius. Eaque cumque ratione iste delectus, illum officia earum in consequuntur eveniet, voluptates, veniam eius atque tenetur fuga reprehenderit aperiam perspiciatis molestiae, qui! Neque alias atque amet pariatur facilis vero fugit architecto in itaque, consequatur quod perspiciatis, eius! Expedita ducimus quis ipsa, dolores iste, cupiditate labore doloremque animi voluptatum qui, dolor iusto ex quo sequi maxime necessitatibus ipsum repellat repellendus nobis corporis nulla officia. Impedit delectus magnam inventore deserunt asperiores blanditiis distinctio, ut, enim consectetur nam atque modi officia maiores fugiat a.</p>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="accordion-header">
-                      <span class="steps-list__txt">Laconat</span><i class="plus"></i>
                     </div>
                     <div class="accordion-body">
                       <div class="bloom">
@@ -815,7 +789,7 @@
                   </li>
                   <li>
                     <div class="accordion-header">
-                      <span class="steps-list__txt">Luxclear</span><i class="plus"></i>
+                      <span class="steps-list__txt">Lux Clear</span><i class="plus"></i>
                     </div>
                     <div class="accordion-body">
                       <div class="bloom">
@@ -860,11 +834,15 @@
                   <div class="swiper-container1 sw">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide tabs__name">Lacobel</div>
-                      <div class="swiper-slide tabs__name">Matelac</div>
-                      <div class="swiper-slide tabs__name">MNGE</div>
                       <div class="swiper-slide tabs__name">Planibel</div>
-                      <div class="swiper-slide tabs__name">laconat</div>
-                      <div class="swiper-slide tabs__name">mirox</div>
+                      <div class="swiper-slide tabs__name">Matelac</div>
+                      <div class="swiper-slide tabs__name">Matelux</div>
+                      <div class="swiper-slide tabs__name">Mirox</div>
+                      <div class="swiper-slide tabs__name">Phoenix</div>
+                      <div class="swiper-slide tabs__name">Cast Glass</div>
+                      <div class="swiper-slide tabs__name">Laminated</div>
+                      <div class="swiper-slide tabs__name">Clear Sight</div>
+                      <div class="swiper-slide tabs__name">Lux Clear</div>
                     </div>
                     <div class="swiper-pagination"></div>
                     <div class="swiper-scrollbar"></div>
