--- a/solution/index.html
+++ b/solution/index.html
@@ -665,9 +665,9 @@
                       <div class="bloom">
                         <p class="bloom__txt">Расширение пространства</p>
                         <ul class="bloom__list fx fx-wrap">
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
                         </ul>
                       </div>
                       <p class="details__link fx">
@@ -691,9 +691,9 @@
                       <div class="bloom">
                         <p class="bloom__txt">Расширение пространства</p>
                         <ul class="bloom__list fx fx-wrap">
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
                         </ul>
                       </div>
                       <p class="details__link fx">
@@ -717,9 +717,9 @@
                       <div class="bloom">
                         <p class="bloom__txt">Расширение пространства</p>
                         <ul class="bloom__list fx fx-wrap">
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
                         </ul>
                       </div>
                       <p class="details__link fx">
@@ -743,9 +743,9 @@
                       <div class="bloom">
                         <p class="bloom__txt">Расширение пространства</p>
                         <ul class="bloom__list fx fx-wrap">
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
                         </ul>
                       </div>
                       <p class="details__link fx">
@@ -769,9 +769,9 @@
                       <div class="bloom">
                         <p class="bloom__txt">Расширение пространства</p>
                         <ul class="bloom__list fx fx-wrap">
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
                         </ul>
                       </div>
                       <p class="details__link fx">
@@ -795,9 +795,9 @@
                       <div class="bloom">
                         <p class="bloom__txt">Расширение пространства</p>
                         <ul class="bloom__list fx fx-wrap">
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
-                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/solution/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/red-min.jpg" alt="Цвет" title="красный"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/green-min.jpg" alt="Цвет" title="зеленый"></a></li>
+                          <li class="bloom__item"><a href="#" class="bloom__link"><img src="/img/zones/blue-min.jpg" alt="Цвет" title="синий"></a></li>
                         </ul>
                       </div>
                       <p class="details__link fx">
