--- a/business/index.html
+++ b/business/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="/business/css/fonts.css">
     <link rel="stylesheet" href="/business/css/style.css">
     <link rel="stylesheet" href="/business/css/media.css">
     <title>Ассоциация предпринимателей России</title>
