--- a/business/index.html
+++ b/business/index.html
@@ -84,6 +84,7 @@
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">контакты</a></li>
                 </ul>
+                <div class="swiper-pagination"></div>
             </nav>
         </div>
     </header>
@@ -187,6 +188,7 @@
                         <div class="swiper-slide"><img src="/business/img/sber.png" alt="partnerLogo"></div>
                     </div>
                 </div>
+                <div class="swiper-pagination1"></div>
                 <a href="#" class="button">все партнеры</a>
             </div>
         </main>
@@ -209,6 +211,7 @@
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">контакты</a></li>  
                 </ul>
+                <div class="swiper-pagination2"></div>
             </nav>
             <div class="footer__content">
                 <div class="footer__logo-container">
